<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5"
            android:gravity="bottom"
            android:background="@drawable/design"
            android:layout_gravity="bottom">

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/petuk_logo_image"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/petuk_icon"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/petuk_logo_image"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/log_in_design_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <!--                <TextView-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:layout_marginStart="10dp"-->
                    <!--                    android:layout_marginTop="15dp"-->
                    <!--                    android:layout_marginEnd="10dp"-->
                    <!--                    android:layout_marginBottom="20dp"-->
                    <!--                    android:fontFamily="@font/carter_one"-->
                    <!--                    android:text="Log in to Continue"-->
                    <!--                    android:textSize="@dimen/_16sdp"-->
                    <!--                    android:textStyle="bold" />-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_name_log_in"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:hint="@string/login_hint_name"
                        android:textColorHint="#b2bec3"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:boxStrokeColor="@color/off_black"
                        app:boxStrokeWidth="@dimen/_2sdp"
                        app:helperText=""
                        app:hintTextAppearance="@style/CustomTextFont"
                        app:helperTextEnabled="true"
                        app:hintTextColor="#b2bec3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mobile_number_given_log_in"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/carter_one"
                            android:inputType="text"
                            android:text=""
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_log_in"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:hint="@string/login_hint_password"
                        android:textColorHint="#b2bec3"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:boxStrokeColor="@color/off_black"
                        app:boxStrokeWidth="@dimen/_2sdp"
                        app:endIconMode="password_toggle"
                        app:endIconTint="#636e72"
                        app:helperText=""
                        app:hintTextAppearance="@style/CustomTextFont"
                        app:helperTextEnabled="true"
                        app:hintTextColor="#b2bec3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_given_log_in"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:imeOptions="actionDone"
                            android:fontFamily="@font/carter_one"
                            android:inputType="textPassword"
                            android:text=""
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/remember_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="@dimen/_25sdp"
                            android:buttonTint="@color/off_orange"
                            android:checked="false"
                            android:fontFamily="@font/carter_one"
                            android:gravity="center"
                            android:text="@string/remember_text"
                            android:textColor="@color/off_red"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/email_pass_miss"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/password_not_match"
                        android:textColor="@android:color/holo_red_light"
                        android:textStyle="bold"
                        android:textSize="@dimen/_10sdp"
                        android:fontFamily="@font/carter_one"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/log_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:background="@drawable/custom_button"
                        android:fontFamily="@font/carter_one"
                        android:text="@string/login_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        app:backgroundTint="@null" />

                </LinearLayout>

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_indicator_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:indeterminate="true"
                    android:layout_gravity="center"/>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>